--- a/ShopApp.WebUI/Views/Product/Index.cshtml
+++ b/ShopApp.WebUI/Views/Product/Index.cshtml
@@ -12,21 +12,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
-    <div class="navbar bg-primary navbar-dark navbar-expand-sm">
-        <div class="container">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Link 1</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Link 2</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Link 3</a>
-                </li>
-            </ul>
-        </div>
-    </div>
+    @await Html.PartialAsync("_navbar")
+    
     @*<h1>@ViewData["Category"]</h1>
         <h4>@(((Product)ViewData["Product"]).Name)</h4>
         <h4>@(((Product)ViewData["Product"]).Price)</h4>
