--- a/ShopApp.WebUI/Views/Product/List.cshtml
+++ b/ShopApp.WebUI/Views/Product/List.cshtml
@@ -1,10 +1,11 @@
 ﻿@using ShopApp.WebUI.Models
 @model ShopApp.WebUI.ViewModels.ProductViewModel
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
-@{ 
+
+@{
     var popularClass = Model.Products.Count > 2 ? "popular" : "";
     var products = Model.Products;
-    var categoryName = Model.Category.Name;
 }
 
 <!DOCTYPE html>
@@ -25,69 +26,42 @@
     </style>
 </head>
 <body>
-    <div class="navbar bg-primary navbar-dark navbar-expand-sm">
-        <div class="container">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Link 1</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Link 2</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Link 3</a>
-                </li>
-            </ul>
-        </div>
-    </div>
+    @await Html.PartialAsync("_navbar")
 
-    <header>
-        <div class="jumbotron jumbotron-fluid"></div>
-        <div class="container">
-            <h1 class="display-4">Shop App</h1>
-            <p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</p>
-        </div>
-    </header>
+    @*@await Html.PartialAsync("_header")*@
 
-    <main>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h1 class="@popularClass">@categoryName</h1>
-                </div>
-            </div>
+    <partial name="_header">
 
-            @if (products.Count == 0)
-            {
-                 <div class="row">
-                     <div class="col-md-12">
-                         <div class="alert alert-danger">
-                             Axtardiginiz Mehsul Yoxdur
-                         </div>
-                     </div>
-                 </div>
-            }
-            else
-            {
-        <div class="row">
+        <main>
+            <div class="container">
 
-
-            @foreach (var product in products)
-            {        
-                <div class="col col-md-3">
-                    <div class="card">
-                        <img class="card-img-top" src="https://www.att.com/idpassets/global/devices/phones/apple/apple-iphone-13-pro/Carousel/Sierrablue/6180D-1.png" alt="">
-                        <div class="card-body">
-                            <h5 class="card-title">@product.Name</h5>
-                            <p class="card-text">@product.Description</p>
-                            <a href="" class="btn btn-primary">İncələ</a>
-                        </div>
+                <div class="row">
+                    <div class="col-md-3">
+                        @*Categories*@
+                        @await Component.InvokeAsync("Categories")
                     </div>
-                </div>          
-            }
-        </div>
-            }
-        </div>
-    </main>
+                    <div class="col-md-9">
+                   @*Products*@
+                        @if (products.Count == 0)
+                        {
+                            @await Html.PartialAsync("_noProduct")
+                        }
+                        else
+                        {
+                            <div class="row">
+                                @foreach (var product in products)
+                                {
+                                    <div class="col-md-3">
+                                        @await Html.PartialAsync("_product", product)
+                                    </div>
+                                }
+                            </div>
+                        }
+                    </div>
+                </div>
+
+              
+            </div>
+        </main>
 </body>
 </html>
