--- a/ShopApp.WebUI/Views/Product/Details.cshtml
+++ b/ShopApp.WebUI/Views/Product/Details.cshtml
@@ -1,21 +1,12 @@
 ﻿
-  @model  ShopApp.WebUI.Models.Product;
 
+<div class="row">
+    <div class="col-md-3">
+        @*Categories*@
+        @await Component.InvokeAsync("Categories")
+    </div>
+    <div class="col-md-9">
+        Details
+    </div>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-</head>
-<body>
-    @await Html.PartialAsync("_navbar")
-    @await Component.InvokeAsync("Categories")
-    <p>Product Name:@Model.Name</p>
-    <p>Product Price:@Model.Price</p>
-    <p> Product Description: @Model.Description</p>
-</body>
-</html>
+</div>
