--- a/ShopApp.WebUI/Views/Product/Index.cshtml
+++ b/ShopApp.WebUI/Views/Product/Index.cshtml
@@ -1,31 +1,11 @@
-﻿@using ShopApp.WebUI.Models
-@model Product
+﻿
+<div class="row">
+    <div class="col-md-3">
+        @*Categories*@
+        @await Component.InvokeAsync("Categories")
+    </div>
+    <div class="col-md-9">
+        Product Index
+    </div>
 
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-</head>
-<body>
-    @await Html.PartialAsync("_navbar")
-    
-    @*<h1>@ViewData["Category"]</h1>
-        <h4>@(((Product)ViewData["Product"]).Name)</h4>
-        <h4>@(((Product)ViewData["Product"]).Price)</h4>
-        <h4>@(((Product)ViewData["Product"]).Description)</h4>*@
-
-
-    @*<h1>@ViewBag.Category</h1>
-        <h4>@ViewBag.Product.Name</h4>
-        <h4>@ViewBag.Product.Description</h4>
-        <h4>@ViewBag.Product.Price</h4>*@
-    @*<h1>@Model.Name</h1>
-        <h2>@Model.Price</h2>*@
-
-</body>
-</html>
+</div>
