--- a/ShopApp.WebUI/Views/Shared/Components/Categories/Default.cshtml
+++ b/ShopApp.WebUI/Views/Shared/Components/Categories/Default.cshtml
@@ -1,5 +1,4 @@
-﻿@using ShopApp.WebUI.Models
-@model List<Category>
+﻿@model List<Category>
 
 <div class="list-group">
     @foreach (var category in Model)
