--- a/ShopApp.WebUI/Views/Home/Index.cshtml
+++ b/ShopApp.WebUI/Views/Home/Index.cshtml
@@ -1,35 +1,36 @@
-﻿@using ShopApp.WebUI.Models
-@model ShopApp.WebUI.ViewModels.ProductViewModel
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-
-
+﻿@model ShopApp.WebUI.ViewModels.ProductViewModel
 
 @{
     var popularClass = Model.Products.Count > 2 ? "popular" : "";
     var products = Model.Products;
 }
 
-<div class="row">
-    <div class="col-md-3">
-        @*Categories*@
-        @await Component.InvokeAsync("Categories")
+@section MessageBox
+{
+    <div class="alert alert-warning text-center m-0">
+        You have a new message
     </div>
-    <div class="col-md-9">
-        @*Products*@
-        @if (products.Count == 0)
+}
+
+
+@if (products.Count == 0)
+{
+    @await Html.PartialAsync("_noProduct")
+}
+else
+{
+    <div class="row">
+        @foreach (var product in products)
         {
-            @await Html.PartialAsync("_noProduct")
-        }
-        else
-        {
-            <div class="row">
-                @foreach (var product in products)
-                {
-                    <div class="col-md-3">
-                        @await Html.PartialAsync("_product", product)
-                    </div>
-                }
+            <div class="col-md-3">
+                @await Html.PartialAsync("_product", product)
             </div>
         }
     </div>
-</div>
+}
+
+@section Scripts
+{
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+}
