--- a/ShopApp.WebUI/Views/Product/Index.cshtml
+++ b/ShopApp.WebUI/Views/Product/Index.cshtml
@@ -1,11 +1,6 @@
 ﻿
-<div class="row">
-    <div class="col-md-3">
-        @*Categories*@
-        @await Component.InvokeAsync("Categories")
-    </div>
-    <div class="col-md-9">
-        Product Index
-    </div>
-
-</div>
+@section Categories
+{
+    @await Component.InvokeAsync("Categories")
+}
+Product Index
