--- a/ShopApp.WebUI/Views/Shared/_Layout.cshtml
+++ b/ShopApp.WebUI/Views/Shared/_Layout.cshtml
@@ -7,21 +7,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="/modules/bootstrap/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="~/css/style.css" />
 
     <title>Document</title>
 </head>
 <body>
+    @if (IsSectionDefined("MessageBox"))
+    {
+        @RenderSection("MessageBox")
+    }
+    else
+    {
+        <div class="alert alert-primary text-center m-0">
+            Welcome
+        </div>
+    }
+
     @await Html.PartialAsync("_navbar")
+
     <partial name="_header">
-        <main>
+        <main class="mb-3">
             <div class="container">
-                  @RenderBody()
+                @if (IsSectionDefined("Categories"))
+                {
+                    <div class="row">
+                        <div class="col-md-3">
+                            @RenderSection("Categories", false)
+                        </div>
+                        <div class="col-md-9">
+                            @RenderBody()
+                        </div>
+                    </div>
+                }
+                else
+                {
+                    <div class="row">
+                        <div class="col-md-12">
+                            @RenderBody()
+                        </div>
+                    </div>
+                }
             </div>
         </main>
 
+        <footer class="py-5 bg-dark text-white text-center">
+            Shop App 2021
+        </footer>
 
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 
+        @RenderSection("Scripts", false)
 </body>
 </html>
