--- a/ShopApp.WebUI/Views/Shared/_Layout2.cshtml
+++ b/ShopApp.WebUI/Views/Shared/_Layout2.cshtml
@@ -12,7 +12,7 @@
 
     <title>Document</title>
 </head>
-<body style="background-color:khaki">
+<body>
 
     @await Html.PartialAsync("_navbar")
     <partial name="_header">
