--- a/ShopApp.WebUI/Views/Shared/_navbar.cshtml
+++ b/ShopApp.WebUI/Views/Shared/_navbar.cshtml
@@ -3,14 +3,19 @@
         <div class="container">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Products</a>
+                    <a href="/product/list" class="nav-link">Products</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Link 2</a>
+                    <a href="/product/create" class="nav-link">Add Products</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Link 3</a>
                 </li>
             </ul>
+
+            <form action="/product/list" class="form-inline">
+                <input name="q" type="text" class="form-control mr-2" placeholder="Axtar"/>
+                <button type="submit" class="btn btn-outline-light mr-0">Axtar</button>
+            </form>
         </div>
     </div>
