--- a/ShopApp.WebUI/Views/Shared/_product.cshtml
+++ b/ShopApp.WebUI/Views/Shared/_product.cshtml
@@ -1,10 +1,16 @@
 ﻿@model ShopApp.WebUI.Models.Product
 
-<div class="card">
+<div class="card mb-3">
     <img class="card-img-top" src="~/img/@Model.ImageUrl" alt="">
     <div class="card-body">
         <h5 class="card-title">@Model.Name</h5>
         <p class="card-text">@Model.Description</p>
-        <a asp-controller="Product" asp-action="Details" asp-route-id="@Model.ProductId" class="btn btn-primary">İncələ</a>
+        <a asp-controller="Product" asp-action="Details" asp-route-id="@Model.ProductId" class="btn btn-primary btn-sm">İncələ</a>
+        <a asp-controller="Product" asp-action="Edit" asp-route-id="@Model.ProductId" class="btn btn-primary btn-sm">Duzelis Et</a>
+
+        <form method="post" action="/product/delete" style="display:inline;">
+            <input type="hidden" name="ProductId" value="@Model.ProductId" />
+            <button type="submit" class="btn btn-danger btn-sm">Sil</button>
+        </form>
     </div>
 </div>
