--- a/ShopApp.WebUI/Views/Product/Create.cshtml
+++ b/ShopApp.WebUI/Views/Product/Create.cshtml
@@ -26,13 +26,13 @@
             <span asp-validation-for="ImageUrl" class="text-danger"></span>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             <label for="CategoryId">CategoryId</label>
             <select asp-for="CategoryId" asp-items="@ViewBag.Categories" class="form-control">
                 <option selected disabled>Secin</option>
             </select>
             <span asp-validation-for="CategoryId" class="text-danger"></span>
-        </div>
+        </div>*@
 
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
