--- a/ShopApp.WebUI/Views/Product/Edit.cshtml
+++ b/ShopApp.WebUI/Views/Product/Edit.cshtml
@@ -22,12 +22,12 @@
         <input asp-for="ImageUrl"  value="@Model.ImageUrl" class="form-control" />
     </div>
 
-    <div class="form-group">
+    @*<div class="form-group">
         <label for="CategoryId">CategoryId</label>
         <select asp-for="CategoryId" asp-items="@ViewBag.Categories" class="form-control">
             <option selected disabled>Secin</option>
         </select>
-    </div>
+    </div>*@
 
     <button type="submit" class="btn btn-primary">Submit</button>
 </form> 
