--- a/ShopApp.WebUI/Views/Shared/_product.cshtml
+++ b/ShopApp.WebUI/Views/Shared/_product.cshtml
@@ -1,4 +1,4 @@
-﻿@model ShopApp.WebUI.Models.Product
+﻿@using ShopApp.Entity
 
 <div class="card mb-3">
     <img class="card-img-top" src="~/img/@Model.ImageUrl" alt="">
