Add Dynamic Category List

--- a/ShopApp.WebUI/Views/Shared/_product.cshtml
+++ b/ShopApp.WebUI/Views/Shared/_product.cshtml
@@ -4,13 +4,13 @@
     <img class="card-img-top" src="~/img/@Model.ImageUrl" alt="">
     <div class="card-body">
         <h5 class="card-title">@Model.Name</h5>
-        <p class="card-text">@Model.Description</p>
-        <a asp-controller="Product" asp-action="Details" asp-route-id="@Model.ProductId" class="btn btn-primary btn-sm">İncələ</a>
-        <a asp-controller="Product" asp-action="Edit" asp-route-id="@Model.ProductId" class="btn btn-primary btn-sm">Duzelis Et</a>
+        <small class="text-muted">
+            <i class="fas fa-dollar-sign"></i>@Model.Price
 
-        <form method="post" action="/product/delete" style="display:inline;">
-            <input type="hidden" name="ProductId" value="@Model.ProductId" />
-            <button type="submit" class="btn btn-danger btn-sm">Sil</button>
-        </form>
+        </small>
+    </div>
+    <div class="card-footer text-center">
+        <a asp-controller="Shop" asp-action="Details" asp-route-id="@Model.ProductId" class="btn btn-primary btn-sm">İncələ</a>
+        <a asp-controller="Shop" asp-action="add to cart" asp-route-id="@Model.ProductId" class="btn btn-primary btn-sm">Karta Elave Et</a>
     </div>
 </div>
