--- a/ShopApp.WebUI/Views/Shared/_navbar.cshtml
+++ b/ShopApp.WebUI/Views/Shared/_navbar.cshtml
@@ -1,15 +1,22 @@
 ﻿  
   <div class="navbar bg-primary navbar-dark navbar-expand-sm">
         <div class="container">
-            <ul class="navbar-nav">
+            <a href="/" class="navbar-brand">ShopApp</a>
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a href="/product/list" class="nav-link">Products</a>
+                    <a asp-controller="shop" asp-action="list" class="nav-link">Products</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/product/create" class="nav-link">Add Products</a>
+                    <a href="" class="nav-link">Cart</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Link 3</a>
+                    <a href="" class="nav-link">Sifarişlər</a>
+                </li>
+                <li class="nav-item">
+                    <a asp-controller="admin" asp-action="createproduct" class="nav-link">Add Products</a>
+                </li>
+                <li class="nav-item">
+                    <a asp-controller="admin" asp-action="productlist" class="nav-link">Admin Products</a>
                 </li>
             </ul>
 
