--- a/ShopApp.WebUI/Views/Shop/Details.cshtml
+++ b/ShopApp.WebUI/Views/Shop/Details.cshtml
@@ -1,24 +1,28 @@
-﻿@model Product
+﻿@model ProductDetailModel
 
 
 <div class="row ">
      <div class="col-md-3">
-            <img src="~/img/@Model.ImageUrl" class="img-fluid">
+            <img src="~/img/@Model.Product.ImageUrl" class="img-fluid">
         </div>
-        <div class="col-md-9">
+     <div class="col-md-9">
+         <h1 class="mb-3">@Model.Product.Name</h1> <hr />
 
-            <h1 class="mb-3">@Model.Name</h1> <hr/>
-            <a href="#" class="btn btn-link p-0 mb-3">Telefon | Elektronika</a>
-            <div class="mb-3">
-                <h4 class="text-primary mb-3">
-                    @Model.Price ₼
-                </h4>
-            </div>
-            <button type="submit" class="btn btn-primary">Add To Card</button>
-        </div>
+         @foreach (var item in Model.Categories)
+         {
+             <a href="#" class="btn btn-link p-0 mb-3">@item.Name</a>
+         }
+        
+         <div class="mb-3">
+             <h4 class="text-primary mb-3">
+                 @Model.Product.Price ₼
+             </h4>
+         </div>
+         <button type="submit" class="btn btn-primary">Add To Card</button>
+     </div>
     </div>
     <div class="row">
         <div class="col-md-12">
-            <p class="p-3">@Model.Description</p>
+            <p class="p-3">@Model.Product.Description</p>
         </div>
 </div>
