--- a/ShopApp.WebUI/Views/Shop/Details.cshtml
+++ b/ShopApp.WebUI/Views/Shop/Details.cshtml
@@ -10,7 +10,7 @@
 
          @foreach (var item in Model.Categories)
          {
-             <a href="#" class="btn btn-link p-0 mb-3">@item.Name</a>
+             <a asp-controller="Shop" asp-action="List" asp-route-category="@item.Url" class="btn btn-link p-0 mb-3">@item.Name</a>
          }
         
          <div class="mb-3">
