--- a/ShopApp.WebUI/Views/Shared/_product.cshtml
+++ b/ShopApp.WebUI/Views/Shared/_product.cshtml
@@ -10,7 +10,7 @@
         </small>
     </div>
     <div class="card-footer text-center">
-        <a asp-controller="Shop" asp-action="Details" asp-route-id="@Model.ProductId" class="btn btn-primary btn-sm">İncələ</a>
+        <a asp-controller="Shop" asp-action="Details" asp-route-url="@Model.Url" class="btn btn-primary btn-sm">İncələ</a>
         <a asp-controller="Shop" asp-action="add to cart" asp-route-id="@Model.ProductId" class="btn btn-primary btn-sm">Karta Elave Et</a>
     </div>
 </div>
