--- a/ShopApp.WebUI/Views/Shop/_ViewImports.cshtml
+++ b/ShopApp.WebUI/Views/Shop/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ShopApp.Entity
 @using ShopApp.WebUI.Models
+@using ShopApp.WebUI.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
