--- a/ShopApp.WebUI/Views/Admin/ProductList.cshtml
+++ b/ShopApp.WebUI/Views/Admin/ProductList.cshtml
@@ -50,7 +50,12 @@
                             </td>
                             <td>
                                 <a href="/admin/products/@item.ProductId" class="btn btn-primary btn-sm mr-2">Edit</a>
-                                <a href="#" class="btn btn-danger btn-sm ">Delete</a>
+
+                                <form action="/admin/DeleteProduct" method="post" style="display:inline;">
+                                    <input type="hidden" name="ProductId" value="@item.ProductId" />
+
+                                    <button type="submit" class="btn btn-danger btn-sm ">Delete</button>
+                                </form>
                             </td>
                         </tr>
                     }
