Add Create,Edit and Update Category

--- a/ShopApp.WebUI/Views/Admin/ProductCreate.cshtml
+++ b/ShopApp.WebUI/Views/Admin/ProductCreate.cshtml
@@ -5,7 +5,7 @@
 
 <div class="row">
     <div class="col-md-8">
-        <form method="post" asp-controller="Admin" asp-action="CreateProduct">
+        <form method="post" asp-controller="Admin" asp-action="ProductCreate">
 
             <div class="form-group row">
                 <label asp-for="Name" class="col-sm-2 col-form-label"></label>
