--- a/ShopApp.WebUI/Views/Shared/_navbar.cshtml
+++ b/ShopApp.WebUI/Views/Shared/_navbar.cshtml
@@ -13,10 +13,11 @@
                     <a href="" class="nav-link">Sifarişlər</a>
                 </li>
                 <li class="nav-item">
-                    <a asp-controller="admin" asp-action="createproduct" class="nav-link">Add Products</a>
-                </li>
-                <li class="nav-item">
                     <a href="/admin/products" class="nav-link">Admin Products</a>
+                </li>
+
+                <li class="nav-item">
+                    <a href="/admin/categories" class="nav-link">Admin Categories</a>
                 </li>
             </ul>
         </div>
