--- a/ShopApp.WebUI/Views/Admin/CategoryEdit.cshtml
+++ b/ShopApp.WebUI/Views/Admin/CategoryEdit.cshtml
@@ -4,7 +4,7 @@
 <hr />
 
 <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-4">
         <form asp-controller="Admin" asp-action="CategoryEdit" method="post">
             <input type="hidden" name="CategoryId" value="@Model.CategoryId" />
             <div class="form-group row">
@@ -27,5 +27,64 @@
                 </div>
             </div>
         </form>
+    </div>
+
+    <div class="col-md-8">
+        <div class="row">
+            <div class="col-md-12">
+                <table class="table table-bordered table-sm">
+                    <thead>
+                        <tr>
+                            <td style="width: 30px;">Id</td>
+                            <td style="width: 100px;">Image</td>
+                            <td>Name</td>
+                            <td style="width: 30px;">Price</td>
+                            <td style="width: 30px;">Təsdiqlənmiş</td>
+                            <td style="width: 160px;"></td>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        @if (Model.Products.Count > 0)
+                        {
+                            @foreach (var item in Model.Products)
+                            {
+                                <tr>
+                                    <td>@item.ProductId</td>
+                                    <td><img src="~/img/@item.ImageUrl" width="80" /></td>
+                                    <td>@item.Name</td>
+                                    <td>@item.Price</td>
+                                    <td>
+                                        @if (item.IsApproved)
+                                        {
+                                            <i style="color:green" class="far fa-check-square"></i>
+                                        }
+                                        else
+                                        {
+                                            <i style="color:red" class="far fa-times-circle"></i>
+                                        }
+                                    </td>
+                                    <td>
+                                        <a href="/admin/products/@item.ProductId" class="btn btn-primary btn-sm mr-2">Edit</a>
+
+                                        <form action="/admin/DeleteProduct" method="post" style="display:inline;">
+                                            <input type="hidden" name="ProductId" value="@item.ProductId" />
+
+                                            <button type="submit" class="btn btn-danger btn-sm ">Delete</button>
+                                        </form>
+                                    </td>
+                                </tr>
+                            }
+                        }
+                        else
+                        {
+                            <div class="alert alert-warning">
+                                <h3>No Products</h3>
+                            </div>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 </div>
