--- a/ShopApp.WebUI/Views/Admin/CategoryEdit.cshtml
+++ b/ShopApp.WebUI/Views/Admin/CategoryEdit.cshtml
@@ -67,8 +67,9 @@
                                     <td>
                                         <a href="/admin/products/@item.ProductId" class="btn btn-primary btn-sm mr-2">Edit</a>
 
-                                        <form action="/admin/DeleteProduct" method="post" style="display:inline;">
+                                        <form action="/admin/deletefromcategory" method="post" style="display:inline;">
                                             <input type="hidden" name="ProductId" value="@item.ProductId" />
+                                            <input type="hidden" name="CategoryId" value="@Model.CategoryId" />
 
                                             <button type="submit" class="btn btn-danger btn-sm ">Delete</button>
                                         </form>
