--- a/ShopApp.WebUI/Views/Admin/CategoryCreate.cshtml
+++ b/ShopApp.WebUI/Views/Admin/CategoryCreate.cshtml
@@ -6,11 +6,12 @@
 <div class="row">
     <div class="col-md-8">
         <form method="post" asp-controller="Admin" asp-action="CategoryCreate">
-
+            <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group row">
                 <label asp-for="Name" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <input class="form-control" asp-for="Name">
+                    <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
             </div>
 
@@ -18,6 +19,7 @@
                 <label asp-for="Url" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <input class="form-control" asp-for="Url">
+                    <span asp-validation-for="Url" class="text-danger"></span>
                 </div>
             </div>
 
