--- a/ShopApp.WebUI/Views/Admin/CategoryEdit.cshtml
+++ b/ShopApp.WebUI/Views/Admin/CategoryEdit.cshtml
@@ -6,11 +6,13 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-controller="Admin" asp-action="CategoryEdit" method="post">
+            <div asp-validation-summary="All" class="text-danger"></div>
             <input type="hidden" name="CategoryId" value="@Model.CategoryId" />
             <div class="form-group row">
                 <label asp-for="Name" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <input class="form-control" asp-for="Name">
+                    <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
             </div>
 
@@ -18,6 +20,7 @@
                 <label asp-for="Url" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <input class="form-control" asp-for="Url">
+                    <span asp-validation-for="Url" class="text-danger"></span>
                 </div>
             </div>
 
@@ -26,6 +29,18 @@
                     <button type="submit" class="btn btn-primary">Save Category</button>
                 </div>
             </div>
+
+            <div id="products">
+                @for (int i = 0; i < Model.Products.Count; i++)
+                {
+                    <input type="hidden" name="Products[@i].ProductId" value="@Model.Products[@i].ProductId" />
+                    <input type="hidden" name="Products[@i].Name" value="@Model.Products[@i].Name" />
+                    <input type="hidden" name="Products[@i].ImageUrl" value="@Model.Products[@i].ImageUrl" />
+                    <input type="hidden" name="Products[@i].Price" value="@Model.Products[@i].Price" />
+                    <input type="hidden" name="Products[@i].IsApproved" value="@Model.Products[@i].IsApproved.ToString()" />
+                }
+            </div>
+
         </form>
     </div>
 
@@ -47,7 +62,7 @@
                     <tbody>
                         @if (Model.Products.Count > 0)
                         {
-                            @foreach (var item in Model.Products)
+                           @foreach (var item in Model.Products)
                             {
                                 <tr>
                                     <td>@item.ProductId</td>
