--- a/ShopApp.WebUI/Views/Admin/ProductCreate.cshtml
+++ b/ShopApp.WebUI/Views/Admin/ProductCreate.cshtml
@@ -56,3 +56,16 @@
         </form>
     </div>
 </div>
+
+@section Scripts
+{
+
+    <script src="~/Lib/jquery-validation/dist/additional-methods.js"></script>
+    <script src="~/Lib/jquery-validation/dist/additional-methods.min.js"></script>
+    <script src="~/Lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/Lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/Lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+    <script src="~/Lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+
+
+}
