Simple changes for validation

--- a/ShopApp.WebUI/Views/Admin/ProductCreate.cshtml
+++ b/ShopApp.WebUI/Views/Admin/ProductCreate.cshtml
@@ -59,6 +59,10 @@
 
 @section Scripts
 {
+    <script src="~/jquery-validation/dist/additional-methods.min.js"></script>
+    <script src="~/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/jquery-validation/dist/jquery.validate.min.js"></script>
+
 
     <script src="~/ckeditor/ckeditor.js"></script>
 
