add ForgotPassword functionality

--- a/ShopApp.WebUI/Views/Account/ResetPassword.cshtml
+++ b/ShopApp.WebUI/Views/Account/ResetPassword.cshtml
@@ -1,23 +1,14 @@
-﻿@model LoginModel
+﻿
+@model ResetPasswordModel
 
-<h1 class="h3">Giriş</h1>
+<h1 class="h3">Şifrəni Yenilə</h1>
 <hr />
 
 <div class="row">
     <div class="col-md-8">
-        <form method="post" asp-controller="Account" asp-action="Login">
-            <input type="hidden" name="ReturnUrl" value="@Model.ReturnUrl" />
+        <form method="post" asp-controller="Account" asp-action="ResetPassword">
             <div class="text-danger" asp-validation-summary="All"></div>
-
-            @*<div class="form-group row">
-            <label asp-for="UserName" class="col-sm-2 col-form-label"></label>
-            <div class="col-sm-10">
-                <input class="form-control" asp-for="UserName">
-                <span class="text-danger" asp-validation-for="UserName"></span>
-            </div>
-        </div>*@
-
-
+            <input type="hidden" asp-for="Token" />
             <div class="form-group row">
                 <label asp-for="Email" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
@@ -37,7 +28,6 @@
             <div class="form-group row">
                 <div class="col-sm-10 offset-sm-2">
                     <button type="submit" class="btn btn-primary">Giriş</button>
-                    <a href="/account/forgotpassword" class="btn-link">Şifrəmi unutdum</a>
                 </div>
             </div>
         </form>
