--- a/ShopApp.WebUI/Views/_ViewImports.cshtml
+++ b/ShopApp.WebUI/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using ShopApp.Entity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using ShopApp.WebUI.Models
+@using ShopApp.WebUI.Extensions
 
 @*//*@
