Management of Users of Roles

--- a/ShopApp.WebUI/Views/Admin/RoleList.cshtml
+++ b/ShopApp.WebUI/Views/Admin/RoleList.cshtml
@@ -24,7 +24,7 @@
                             <td>@item.Name</td>
                            
                             <td>
-                                <a href="/admin/role/edit/@item.Id" class="btn btn-primary btn-sm mr-2">Düzəliş Et</a>
+                                <a href="/admin/role/@item.Id" class="btn btn-primary btn-sm mr-2">Düzəliş Et</a>
 
                                 <form action="/admin/role/delete" method="post" style="display:inline;">
                                     <input type="hidden" name="RoleId" value="@item.Id" />
