--- a/ShopApp.WebUI/Views/_ViewImports.cshtml
+++ b/ShopApp.WebUI/Views/_ViewImports.cshtml
@@ -3,5 +3,6 @@
 @using ShopApp.WebUI.Models
 @using Microsoft.AspNetCore.Identity
 @using ShopApp.WebUI.Extensions
+@using ShopApp.WebUI.Identity
 
 @*//*@
