--- a/ShopApp.WebUI/Views/Shared/_navbar.cshtml
+++ b/ShopApp.WebUI/Views/Shared/_navbar.cshtml
@@ -15,7 +15,7 @@
                       <a href="" class="nav-link">Sifarişlər</a>
                   </li>
 
-                  @if (User.IsInRole("SuperAdmin"))
+                  @if (User.IsInRole("Admin"))
                   {
                       <li class="nav-item">
                           <a href="/admin/products" class="nav-link">Admin Products</a>
