Create Order Detail Page

--- a/ShopApp.WebUI/Views/Shared/_navbar.cshtml
+++ b/ShopApp.WebUI/Views/Shared/_navbar.cshtml
@@ -4,12 +4,12 @@
           <a href="/" class="navbar-brand">ShopApp</a>
           <ul class="navbar-nav mr-auto">
               <li class="nav-item">
-                  <a href="/products" class="nav-link">Products</a>
+                  <a href="/products" class="nav-link">Məhsullar</a>
               </li>
               @if (User.Identity.IsAuthenticated)
               {
                   <li class="nav-item">
-                      <a href="/cart" class="nav-link">Cart</a>
+                      <a href="/cart" class="nav-link">Səbət</a>
                   </li>
                   <li class="nav-item">
                       <a href="" class="nav-link">Sifarişlər</a>
