--- a/ShopApp.WebUI/Views/Shared/_product.cshtml
+++ b/ShopApp.WebUI/Views/Shared/_product.cshtml
@@ -5,7 +5,7 @@
     <div class="card-body">
         <h5 class="card-title">@Model.Name</h5>
         <small class="text-muted">
-            <i class="fas fa-lira-sign"></i>@Model.Price
+            <i></i>@Model.Price ₼
         </small>
     </div>
     <div class="card-footer text-center">
